--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,15 +22,19 @@
   <!-- Content Security Policy -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
-    script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdnjs.cloudflare.com https://www.gstatic.com https://www.googleapis.com https://apis.google.com https://securetoken.googleapis.com https://firebase.googleapis.com https://*.firebaseapp.com https://*.googleapis.com;
-    style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://fonts.googleapis.com;
-    img-src 'self' data: https: blob:;
+    script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdnjs.cloudflare.com https://www.gstatic.com https://www.googleapis.com https://apis.google.com https://securetoken.googleapis.com https://firebase.googleapis.com https://*.firebaseapp.com https://*.googleapis.com https://www.googletagmanager.com https://googletagmanager.com https://region1.google-analytics.com;
+    style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://fonts.googleapis.com https://www.googletagmanager.com https://googletagmanager.com;
+    img-src 'self' data: https: blob: https://www.googletagmanager.com https://googletagmanager.com https://storage.googleapis.com https://firebasestorage.googleapis.com;
+    media-src 'self' https://storage.googleapis.com https://firebasestorage.googleapis.com;
     font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com;
-    connect-src 'self' https://*.googleapis.com https://*.firebaseapp.com https://securetoken.googleapis.com https://firebase.googleapis.com https://identitytoolkit.googleapis.com wss://*.firebaseio.com https://*.firebaseio.com http://localhost:5001;
+    connect-src 'self' ws://localhost:3000 ws://localhost:3001 wss://localhost:3000 wss://localhost:3001 https://*.googleapis.com https://*.firebaseapp.com https://securetoken.googleapis.com https://firebase.googleapis.com https://identitytoolkit.googleapis.com wss://*.firebaseio.com https://*.firebaseio.com http://localhost:54112 http://127.0.0.1:54112 https://www.googletagmanager.com https://googletagmanager.com https://region1.google-analytics.com;
     frame-src 'self' https://*.firebaseapp.com https://accounts.google.com;
     object-src 'none';
     base-uri 'self';
     form-action 'self';
+    frame-ancestors 'none';
+    cross-origin-opener-policy: same-origin-allow-popups;
+    cross-origin-embedder-policy: require-corp;
   ">
 
 </head>
