Fix: Add Render backend to Content Security Policy

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -27,7 +27,7 @@
     img-src 'self' data: https: blob: https://www.googletagmanager.com https://googletagmanager.com https://storage.googleapis.com https://firebasestorage.googleapis.com;
     media-src 'self' https://storage.googleapis.com https://firebasestorage.googleapis.com;
     font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com;
-    connect-src 'self' http://localhost:5001 http://127.0.0.1:5001 ws://localhost:3000 ws://localhost:3001 wss://localhost:3000 wss://localhost:3001 https://*.googleapis.com https://*.firebaseapp.com https://securetoken.googleapis.com https://firebase.googleapis.com https://identitytoolkit.googleapis.com wss://*.firebaseio.com https://*.firebaseio.com http://localhost:54112 http://127.0.0.1:54112 https://www.googletagmanager.com https://googletagmanager.com https://region1.google-analytics.com https://*.google-analytics.com;
+    connect-src 'self' http://localhost:5001 http://127.0.0.1:5001 https://lugn-trygg-backend.onrender.com ws://localhost:3000 ws://localhost:3001 wss://localhost:3000 wss://localhost:3001 https://*.googleapis.com https://*.firebaseapp.com https://securetoken.googleapis.com https://firebase.googleapis.com https://identitytoolkit.googleapis.com wss://*.firebaseio.com https://*.firebaseio.com http://localhost:54112 http://127.0.0.1:54112 https://www.googletagmanager.com https://googletagmanager.com https://region1.google-analytics.com https://*.google-analytics.com;
     frame-src 'self' https://*.firebaseapp.com https://accounts.google.com;
     object-src 'none';
     base-uri 'self';
