Frontend: förbättrad <noscript>-fallback för tillgänglighet utan JavaScript. Backend: 100% test coverage och stabilitet för email_service, oauth_service, push/audit. [auto]

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -37,7 +37,17 @@
 </head>
 <body>
   <noscript>
-    Du behöver aktivera JavaScript för att kunna använda den här webbplatsen.
+    <style>
+      .no-js-fallback { display: block; padding: 2rem; background: #fffbe6; color: #333; text-align: center; }
+      .no-js-fallback img { margin: 2rem auto; max-width: 200px; display: block; }
+    </style>
+    <div class="no-js-fallback">
+      <img src="/logo.png" alt="Lugn & Trygg logotyp" />
+      <h1>Lugn & Trygg kräver JavaScript</h1>
+      <p>För bästa upplevelse, aktivera JavaScript i din webbläsare.</p>
+      <p>Om du har problem, kontakta <a href="mailto:support@lugn-trygg.se">supporten</a>.</p>
+      <p><a href="https://lugn-trygg.se">Till startsidan</a></p>
+    </div>
   </noscript> <!-- ⚠️ Meddelande om JavaScript är inaktiverat -->
 
   <!--  Root-element där React-applikationen renderas -->
