--- a/web-app/index.html
+++ b/web-app/index.html
@@ -23,7 +23,7 @@
   <!-- Content Security Policy -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
-    script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdnjs.cloudflare.com https://www.gstatic.com https://www.googleapis.com https://apis.google.com https://securetoken.googleapis.com https://firebase.googleapis.com https://*.firebaseapp.com https://*.googleapis.com https://www.googletagmanager.com https://googletagmanager.com https://region1.google-analytics.com;
+    script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdnjs.cloudflare.com https://www.gstatic.com https://www.googleapis.com https://apis.google.com https://securetoken.googleapis.com https://firebase.googleapis.com https://*.firebaseapp.com https://*.googleapis.com https://www.googletagmanager.com https://googletagmanager.com https://region1.google-analytics.com https://unpkg.com;
     style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://fonts.googleapis.com https://www.googletagmanager.com https://googletagmanager.com;
     img-src 'self' data: https: blob: https://www.googletagmanager.com https://googletagmanager.com https://storage.googleapis.com https://firebasestorage.googleapis.com;
     media-src 'self' https://storage.googleapis.com https://firebasestorage.googleapis.com;
@@ -54,6 +54,8 @@
   <!--  Root-element där React-applikationen renderas -->
   <div id="root"></div>
 
+  <!--  jsPDF via CDN for PDF export functionality -->
+  <script src="https://unpkg.com/jspdf@2.5.1/dist/jspdf.umd.min.js" defer></script>
   <!--  Laddar React-applikationen -->
   <script type="module" src="/src/main.tsx" defer></script>
 </body>
