Fix production deployment issues: Firebase 403 errors, service worker MIME type, manifest 401

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <meta name="apple-mobile-web-app-title" content="Lugn & Trygg">
   <link rel="apple-touch-icon" href="/icon-192.png">
 
+  <!-- Service Worker and Manifest -->
+  <link rel="manifest" href="/site.webmanifest" crossorigin="use-credentials">
+
   <!-- Content Security Policy -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
