--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   <!-- Service Worker and Manifest -->
   <link rel="manifest" href="/site.webmanifest" crossorigin="use-credentials">
+  <!-- Force redeploy -->
 
 </head>
 <body>
