Fix: Simplified manifest to remove syntax errors, force redeploy v2

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <!-- Service Worker and Manifest -->
   <link rel="manifest" href="/site.webmanifest" crossorigin="use-credentials">
-  <!-- Force redeploy -->
+  <!-- Force redeploy v2 -->
 
 </head>
 <body>
