Fix: Remove CSP headers and disable manifest to fix CSS loading on Vercel

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   <link rel="apple-touch-icon" href="/icon-192.png">
 
   <!-- Service Worker and Manifest -->
-  <link rel="manifest" href="/site.webmanifest" crossorigin="use-credentials">
-  <!-- Force redeploy v2 -->
+  <!-- Manifest temporarily disabled due to Vercel caching issues -->
+  <!-- <link rel="manifest" href="/site.webmanifest" crossorigin="use-credentials"> -->
+  <!-- Force redeploy v3 -->
 
 </head>
 <body>
