Force redeploy v4 - trigger Vercel build

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Service Worker and Manifest -->
   <!-- Manifest temporarily disabled due to Vercel caching issues -->
   <!-- <link rel="manifest" href="/site.webmanifest" crossorigin="use-credentials"> -->
-  <!-- Force redeploy v3 -->
+  <!-- Force redeploy v4 - Vercel not picking up changes -->
 
 </head>
 <body>
