--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
   <!--  Root-element där React-applikationen renderas -->
   <div id="root"></div>
 
+  <!--  CRITICAL FIX: Load React globally to prevent undefined errors in chunks -->
+  <script crossorigin src="https://unpkg.com/react@18.2.0/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
+
   <!--  jsPDF via CDN for PDF export functionality -->
   <script id="jspdf-cdn" src="https://unpkg.com/jspdf@2.5.1/dist/jspdf.umd.min.js" defer></script>
   <!--  Laddar React-applikationen - NO DEFER to ensure proper module load order -->
