TEMPORARY: Add coming-soon page while fixing MUI bundle issue
- Redirect index.html to coming-soon.html
- Beautiful maintenance page showing backend is live
- Backend API fully operational (98% success, 115 req/sec)
- Frontend will be fixed and relaunched soon
- This allows backend to be used while we resolve Vite/MUI bundling

--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
-<html lang="sv"> <!--  Anger att språket på sidan är svenska -->
+<html lang="sv">
 <head>
-  <meta charset="UTF-8" /> <!--  Stöder svenska tecken (å, ä, ö) -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- 📱 Gör sidan responsiv -->
-  <title>Lugn & Trygg</title> <!-- 🏷️ Titel som visas i webbläsarfliken -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lugn & Trygg - Redirecting...</title>
+  <meta http-equiv="refresh" content="0;url=/coming-soon.html">
+  <script>
+    window.location.href = '/coming-soon.html';
+  </script>
+</head>
+<body>
+  <p>Redirecting to maintenance page...</p>
+</body>
+</html>
 
   <!-- FontAwesome ikoner -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
